--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main.Contacts.ContactsActivity"></activity>
+        <activity android:name=".Main.Display.ReViewImageActivity"></activity>
+        <activity android:name=".Main.Contacts.ContactsActivity" />
         <activity android:name=".Main.chats.ChatsActivity" />
         <activity android:name=".Main.Auth.UserDataActivity" />
 
